--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+#excusa{
+   padding-left: 20%;
+   margin-left: 20px;
+}
